filtering stages added

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
             <div class="explanation">
                 <h3>How to Read This Visualization</h3>
                 <p>
-                    Four stages show how tweet sampling and topic selection shape visible and invisible attitudes:
+                    Three stages show how tweet sampling and topic selection shape visible and invisible attitudes:
                 </p>
                 <ul>
                     <li><strong>Stage 1 (Green):</strong> All users' true ideological means</li>
-                    <li><strong>Stage 2 (Blue):</strong> Political tweet authors</li>
-                    <li><strong>Stage 3 (Light Blue):</strong> Non-political tweet authors</li>
-                    <li><strong>Stage 4 (Red/Gray):</strong> Attitudes overlay — posted topic (red) vs shadow attitudes (gray)</li>
+                    <li><strong>Stage 2 (Blue/Light Blue):</strong> Tweet authors overlay — political (blue) vs non-political (light blue)</li>
+                    <li><strong>Stage 3 (Red/Gray):</strong> Attitudes overlay — posted topic (red) vs shadow attitudes (gray)</li>
                 </ul>
                 <p>
                     Each sample selects a user from the population without bias, then classifies the tweet as
-                    political based on the user's ideology. Political tweets drop to Stage 2; non-political tweets
-                    drop to Stage 3. For political tweets, the user's issue attitudes are shown as circles, with the
-                    selected tweet topic highlighted in red and shadow attitudes in gray (Stage 4).
+                    political based on the user's ideology. Author squares drop to Stage 2 colored by type (blue for
+                    political, light blue for non-political). For political tweets, the user's issue attitudes are
+                    shown as circles in Stage 3. They pass through the gray "ATTITUDE SELECTION" band and only turn
+                    red after crossing it if they are the selected tweet topic; other attitudes remain gray.
                 </p>
             </div>
 
