--- a/index.html
+++ b/index.html
@@ -60,15 +60,16 @@
                 </p>
                 <ul>
                     <li><strong>Stage 1 (Green):</strong> All users' true ideological means</li>
-                    <li><strong>Stage 2 (Blue/Light Blue):</strong> Tweet authors overlay — political (blue) vs non-political (light blue)</li>
-                    <li><strong>Stage 3 (Red/Gray):</strong> Attitudes overlay — posted topic (red) vs shadow attitudes (gray)</li>
+                    <li><strong>Stage 2 (Black/Gray):</strong> Tweet authors overlay — political (black) vs non-political (gray)</li>
+                    <li><strong>Stage 3 (Black/Gray):</strong> Attitudes overlay — posted topic (black) vs shadow attitudes (gray)</li>
                 </ul>
                 <p>
                     Each sample selects a user from the population without bias, then classifies the tweet as
-                    political based on the user's ideology. Author squares drop to Stage 2 colored by type (blue for
-                    political, light blue for non-political). For political tweets, the user's issue attitudes are
-                    shown as circles in Stage 3. They pass through the gray "ATTITUDE SELECTION" band and only turn
-                    red after crossing it if they are the selected tweet topic; other attitudes remain gray.
+                    political based on the user's ideology. Author squares drop to Stage 2. They pass through a gray
+                    "USER SELECTION" band; political authors remain black, non-political turn gray after the band.
+                    For political tweets, the user's issue attitudes are shown as circles in Stage 3. They pass through
+                    a gray "ATTITUDE SELECTION" band; the selected topic remains/turns black after the band, other
+                    attitudes remain gray.
                 </p>
             </div>
 
