--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
                     <button id="resetBtn" class="btn btn-danger">Reset</button>
                 </div>
 
+                
+
                 <div class="control-group">
                     <label for="issuesSlider">Number of issues per user: <span id="issuesVal">20</span></label>
                     <input id="issuesSlider" type="range" min="3" max="50" step="1" value="20">
@@ -93,6 +95,7 @@
 
     <!-- JavaScript Modules -->
     <script src="assets/js/config.js"></script>
+    <script src="assets/js/selection.js"></script>
     <script src="assets/js/ball.js"></script>
     <script src="assets/js/histogram.js"></script>
     <script src="assets/js/visualization.js"></script>
