SE scale sliders

--- a/index.html
+++ b/index.html
@@ -40,10 +40,24 @@
                     <div>
                         <label>Linear b1: <span id="lmLinearVal">0.0000</span></label>
                         <input id="lmLinearSlider" type="range" min="-1" max="1" step="0.0005" value="0">
+                        <div class="slider-scale" id="lmLinearScale">
+                            <span class="tick">-2</span>
+                            <span class="tick">-1</span>
+                            <span class="tick">est</span>
+                            <span class="tick">+1</span>
+                            <span class="tick">+2</span>
+                        </div>
                     </div>
                     <div>
                         <label>Quadratic b2: <span id="lmQuadraticVal">0.0000</span></label>
                         <input id="lmQuadraticSlider" type="range" min="-1" max="1" step="0.0005" value="0">
+                        <div class="slider-scale" id="lmQuadraticScale">
+                            <span class="tick">-2</span>
+                            <span class="tick">-1</span>
+                            <span class="tick">est</span>
+                            <span class="tick">+1</span>
+                            <span class="tick">+2</span>
+                        </div>
                     </div>
                     <small class="help-text">Adjust coefficients used for political tweeting probability if a model is loaded.</small>
                 </div>
@@ -53,10 +67,24 @@
                     <div>
                         <label>Linear c1: <span id="issueSelLinearVal">0.000000</span></label>
                         <input id="issueSelLinearSlider" type="range" min="-1" max="1" step="0.0005" value="0">
+                        <div class="slider-scale" id="issueSelLinearScale">
+                            <span class="tick">-2</span>
+                            <span class="tick">-1</span>
+                            <span class="tick">est</span>
+                            <span class="tick">+1</span>
+                            <span class="tick">+2</span>
+                        </div>
                     </div>
                     <div>
                         <label>Quadratic c2: <span id="issueSelQuadraticVal">0.000000</span></label>
                         <input id="issueSelQuadraticSlider" type="range" min="-1" max="1" step="0.0005" value="0">
+                        <div class="slider-scale" id="issueSelQuadraticScale">
+                            <span class="tick">-2</span>
+                            <span class="tick">-1</span>
+                            <span class="tick">est</span>
+                            <span class="tick">+1</span>
+                            <span class="tick">+2</span>
+                        </div>
                     </div>
                     <small class="help-text">Adjust coefficients used for topic selection weights if a model is loaded.</small>
                 </div>
