--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!-- Control Panel -->
             <div class="controls" id="controlPanel">
                 <div class="control-group button-group">
-                    <button id="sampleBtn" class="btn btn-primary">Sample Tweet</button>
+                    <button id="sampleBtn" class="btn btn-primary">Sample Once</button>
                     <button id="autoBtn" class="btn btn-secondary">Start Auto Sample</button>
                     <button id="resetBtn" class="btn btn-danger">Reset</button>
                 </div>
@@ -37,10 +37,10 @@
 
                 <div class="control-group">
                     <label>Political tweeting model</label>
-                    <small class="help-text">Adjust political tweeting probability weights.</small>
-                    <p>o_mean_political ~ issue_irt_scale + issue_irt_scale^2</p>
+                    
+                    <p class="model-code">pol_tw_rate ~ user_ideo + user_ideo^2</p>
                     <div>
-                        <label>Linear b1: <span id="lmLinearVal">0.0000</span></label>
+                        <small><strong>Linear (Right-Leaning): </strong><span id="lmLinearVal">0.0000</span></small>
                         <input id="lmLinearSlider" type="range" min="-1" max="1" step="0.0005" value="0">
                         <div class="slider-scale" id="lmLinearScale">
                             <span class="tick">-2</span>
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div>
-                        <label>Quadratic b2: <span id="lmQuadraticVal">0.0000</span></label>
+                        <small><strong>Quadratic (Polarizing): </strong><span id="lmQuadraticVal">0.0000</span></small>
                         <input id="lmQuadraticSlider" type="range" min="-1" max="1" step="0.0005" value="0">
                         <div class="slider-scale" id="lmQuadraticScale">
                             <span class="tick">-2</span>
@@ -65,10 +65,9 @@
 
                 <div class="control-group">
                     <label>Issue selection model</label>
-                    <small class="help-text">Adjust attidue selection weights for the model:</small>
-                    <p>prevalence_score ~ issue_specific_conservatism + issue_specific_conservatism^2</p>
+                    <p class="model-code">topic_rate ~ topic_stance + topic_stance^2</p>
                     <div>
-                        <label>Linear c1: <span id="issueSelLinearVal">0.000000</span></label>
+                        <small><strong>Linear (Right-Leaning): </strong> <span id="issueSelLinearVal">0.000000</span></small>
                         <input id="issueSelLinearSlider" type="range" min="-1" max="1" step="0.0005" value="0">
                         <div class="slider-scale" id="issueSelLinearScale">
                             <span class="tick">-2</span>
@@ -79,7 +78,7 @@
                         </div>
                     </div>
                     <div>
-                        <label>Quadratic c2: <span id="issueSelQuadraticVal">0.000000</span></label>
+                        <small><strong>Quadratic (Polarizing): </strong><span id="issueSelQuadraticVal">0.000000</span></small>
                         <input id="issueSelQuadraticSlider" type="range" min="-1" max="1" step="0.0005" value="0">
                         <div class="slider-scale" id="issueSelQuadraticScale">
                             <span class="tick">-2</span>
@@ -132,7 +131,9 @@
         <!-- Main Content Area -->
         <main class="main-content">
             <div class="visualization">
-                <div id="canvasContainer"></div>
+                <div id="vizColumn" class="viz-column">
+                    <div id="canvasContainer"></div>
+                </div>
             </div>
         </main>
     </div>
