--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <aside class="sidebar">
             <!-- Header Content -->
             <div class="sidebar-header">
-                <h1>Self-Censorship Multi-Stage Visualization</h1>
-                <p class="subtitle">
+                <h1>Polarization by Selection</h1>
+                <!-- <p class="subtitle">
                     Exploring how user-level self-selection and attitude-level self-censorship 
                     create false polarization in visible ideologies
-                </p>
+                </p> -->
             </div>
 
             <!-- Control Panel -->
